--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,7 @@
         "react": "^16.9.0",
         "react-app-polyfill": "^1.0.2",
         "react-dom": "^16.9.0",
-        "react-images": "^1.0.0",
+        "react-responsive-carousel": "^3.1.50",
         "react-scripts": "3.1.1",
         "semantic-ui-react": "^0.88.1"
     },
